<resources>
    <string name="app_name">SortComparer</string>

    <string name="firstScreenMessage">Select algorithms to compare</string>
    <string name="header_sorts">Algorithms</string>
    <string name="header_settings">Settings</string>

    <string name="choose_datastructure">Pick a data structure</string>
    <string name="choose_data_size">Select data size</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second_screen">SecondScreen</string>
    <string name="start_button">Start</string>
    <string name="title_activity_third_screen">ThirdScreen</string>
    <string name="data_range_max">500,000</string>
    <string name="data_range_min">1</string>
    <string name="postexecute_message">Sorting complete!</string>
    <string name="preexecute_message">Now sorting...</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_time">Time</string>
    <string name="results_swaps">Number of Swaps</string>
    <string name="results_compares">Number of Compares</string>
    <string name="results_button">See Results</string>
    <string name="start_over_button">Start Over</string>
    <string name="sort_cancel_button">Cancel</string>

    <string-array name="tabs">
        <item>Time</item>
        <item>Compares</item>
        <item>Swaps</item>
    </string-array>
    <string name="title_activity_results_new">ResultsNew</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="sorting_algorithms">
        <item>Selection</item>
        <item>n2</item>

        <item>Insertion</item>
        <item>n2</item>

        <item>Merge</item>
        <item>nlogn</item>
    </string-array>

    <string name="error_no_algorithms_selected">No algorithms selected</string>
    <string name="error_no_datastructure_selected">No data structure selected</string>
    <string name="title_activity_graphs">GraphsActivity</string>

</resources>
