<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".sortingdialog.SortDialogFragment">

    <TextView
        android:id="@+id/preexecute_message"
        style="@style/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preexecute_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sort_name"
        style="@style/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/preexecute_message"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sort_text"
        style="@style/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sort_name" />

    <TextView
        android:id="@+id/postexecute_message"
        style="@style/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sort_text"
        android:text="@string/postexecute_message"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/postexecute_message"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        style="@style/image_text_button"
        android:padding="6dp"
        android:visibility="invisible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/results_button"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ic_results"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_insert_chart_white"
            android:tint="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_cancel_button"
        android:layout_below="@id/postexecute_message"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:clickable="true"
        />

</RelativeLayout>

