<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".thirdscreen.ThirdScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/console"
        android:background="@color/black"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        >
        <TextView
            android:id="@+id/preexecute_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preexecute_message"
            android:visibility="gone"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/preexecute_message"
            android:visibility="gone"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sort_name"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_0"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_1"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_2"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_3"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_4"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_5"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_6"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_7"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/tv_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_8"
            style="@style/text_console"
            />
        <TextView
            android:id="@+id/postexecute_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_9"
            android:text="@string/postexecute_message"
            android:visibility="gone"
            style="@style/text_console"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/results_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/console"
        android:clickable="true"
        android:onClick="nextScreen"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        >

        <ImageView
            android:id="@+id/ic_results"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_insert_chart_white"
            android:tint="@color/accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_results"
            android:layout_alignTop="@+id/ic_results"

            android:layout_toLeftOf="@+id/ic_results"
            android:gravity="center_vertical"
            android:text="@string/results_button"
            android:textColor="@color/accent"
            android:textSize="30sp" />

    </RelativeLayout>

</RelativeLayout>
