<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="saad.sortcomparer.secondscreen.SecondScreen">

    <TextView
        android:id="@+id/choose_datastructure_message"
        style="@style/messages_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_datastructure" />

    <LinearLayout
        android:id="@+id/cards"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_datastructure_message"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:id="@+id/array_card"
            android:layout_width="0dp"
            android:layout_height="120dp"

            android:layout_weight="1"
            android:clickable="true"

            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/card_view_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/check_circle_array"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_check_circle_white"
                    android:tint="@color/accent"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/ic_array"

                    style="@style/ic_data"
                    android:clickable="false"
                    android:src="@drawable/ic_format_list_numbered_white" />

                <TextView
                    style="@style/name_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_array"
                    android:text="Array" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:id="@+id/list_card"
            android:layout_width="0dp"
            android:layout_height="120dp"

            android:layout_weight="1"
            android:clickable="true"

            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/card_view_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/check_circle_list"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_check_circle_white"
                    android:tint="@color/accent"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/ic_list"
                    style="@style/ic_data"
                    android:clickable="false"
                    android:src="@drawable/ic_format_list_numbered_white" />

                <TextView
                    style="@style/name_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ic_list"
                    android:text="List" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/choose_data_size_message"
        style="@style/messages_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cards"
        android:text="@string/choose_data_size" />


    <RelativeLayout
        android:id="@+id/range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_data_size_message">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="2,000,000,000" />

    </RelativeLayout>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/range"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:text="1" />

    <RelativeLayout
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/size"
        android:clickable="true"
        android:onClick="nextScreen"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/ic_timer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_timer_white"
            android:tint="@color/accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_timer"
            android:layout_alignTop="@+id/ic_timer"

            android:layout_toLeftOf="@+id/ic_timer"
            android:gravity="center_vertical"
            android:text="@string/start_button"
            android:textColor="@color/accent"
            android:textSize="30sp" />

    </RelativeLayout>
</RelativeLayout>
